[tool.poetry]
name = "data_scraping"
version = "0.1.0"
description = ""
authors = ["nayaras"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
